fix: archive post align & margin

--- a/themes/material-flow/source/less/_archive.less
+++ b/themes/material-flow/source/less/_archive.less
@@ -26,11 +26,13 @@
     }
 
     .archive-post {
+      margin-bottom: 4px;
+
       a {
-        display: inline-flex;
+        display: flex;
         flex-flow: row nowrap;
         justify-content: flex-start;
-        align-items: flex-start;
+        align-items: center;
       }
 
       time {
